<resources>
    <string name="app_name">Expenses Tracker</string>


    <!-- Top titles -->
    <string name="transaction_categories_title">Transaction Categories</string>
    <string name="money_spent_each_category_title">Money Spent</string>
    <string name="transaction_title">Transaction</string>


    <!-- Category Names -->
    <string name="food_category">Food</string>
    <string name="drink_category">Drinks</string>
    <string name="shopping_category">Shopping</string>
    <string name="entertainment_category">Entertainment</string>
    <string name="investments_category">Investments</string>

    <!-- Transaction Categories Activity Strings -->
    <string name="type_collection">Collections</string>
    <string name="type_purchase">Purchases</string>
    <string name="collection_button">Add Money</string>
    <string name="info_btton"> </string>
    <string name="add_button">+</string>

    <!-- Initial Activity Strings -->
    <string name="name">Name</string>
    <string name="budget">Budget</string>
    <string name="per_week">Per Week</string>
    <string name="per_month">Per Month</string>
    <string name="initial_budget">Initial Budget</string>
    <string name="submit">Submit</string>
    <string name="warning">Warning</string>

    <!-- Transaction Activity Strings -->
    <string name="amount">Amount</string>
    <string name="comment">Comment</string>
    <string name="make_transaction">Make transaction</string>
    <string name="enter_money">enter money</string>
    <string name="button">button</string>

    <!-- Dialog Strings-->
    <string name="add_dialog_button">add</string>
    <string name="cancel_dialog_button">Cancel</string>
    <string name="give_category_textView">Give category name</string>
    <string name="submit_category_name_button">Submit</string>
    <string name="category_name_editText">Category name</string>
</resources>