<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/food_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/food_category"
        style="@style/CategoryButton"
        />

    <Button
        android:id="@+id/drink_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/drink_category"
        style="@style/CategoryButton"
        />
    <Button
        android:id="@+id/shopping_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/shopping_category"
        style="@style/CategoryButton"
        />

    <Button
        android:id="@+id/entertainment_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/entertainment_category"
        style="@style/CategoryButton"
        />

    <Button
    android:id="@+id/investments_button"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:text="@string/investments_category"
    style="@style/CategoryButton"
    />


</LinearLayout>