<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="12dp"
        android:textAlignment="center"
        android:text="@string/food_category"
        style="@style/CategoryTextView"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="22dp"
        android:textAlignment="center"
        android:text="$200"
        style="@style/CategoryTextView"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="42dp"
        android:textAlignment="center"
        android:text="@string/drink_category"
        style="@style/CategoryTextView"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="22dp"
        android:textAlignment="center"
        android:text="$200"
        style="@style/CategoryTextView"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="42dp"
        android:textAlignment="center"
        android:text="@string/shopping_category"
        style="@style/CategoryTextView"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="22dp"
        android:textAlignment="center"
        android:text="$200"
        style="@style/CategoryTextView"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="42dp"
        android:textAlignment="center"
        android:text="@string/entertainment_category"
        style="@style/CategoryTextView"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="22dp"
        android:textAlignment="center"
        android:text="$200"
        style="@style/CategoryTextView"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="42dp"
        android:textAlignment="center"
        android:text="@string/investments_category"
        style="@style/CategoryTextView"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="22dp"
        android:textAlignment="center"
        android:text="$200"
        style="@style/CategoryTextView"/>

</LinearLayout>